<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:hardwareAccelerated="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".Gallery">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">


        <ImageButton
            android:id="@+id/back_1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/baseline_arrow_back_white"
            android:clickable="true"
            android:contentDescription="@string/content_description"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:text="@string/button_7"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/baseline_home_24_white"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/homenavigation" />
    </RelativeLayout>


    <GridView
        android:id="@+id/myGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="2"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1" />


</androidx.constraintlayout.widget.ConstraintLayout>